--- a/src/Shopfoo.Client/index.html
+++ b/src/Shopfoo.Client/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <title>SAFEr Template</title>
     <meta charset="utf-8">
