--- a/src/Shopfoo.Client/index.html
+++ b/src/Shopfoo.Client/index.html
@@ -1,14 +1,14 @@
 ﻿<!doctype html>
 <html lang="en" data-theme="light">
 <head>
-    <title>SAFEr Template</title>
+    <title>Shopfoo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="./styles/styles.css"/>
 </head>
 <body>
-    <div id="safer-app"></div>
+    <div id="shopfoo-app"></div>
     <script type="module" src=".fable-build/App.js"></script>
 </body>
 </html>
